--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<title>しょうは語録</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <p class="logo">しょうは語録<p>
 <br><p class="beta">※現在テスト ゲーム用しか入ってません。</p>
