--- a/game/game.htm
+++ b/game/game.htm
@@ -20,3 +20,8 @@
 <audio id="iiyo">
     <source src="iiyo.mp3" type="audio/mp3">
 </audio>
+
+<br><div class="btn" onclick="uza()">うざっ</div>
+<audio id="uza">
+    <source src="uza.mp3" type="audio/mp3">
+</audio>
